--- a/week3/style.css
+++ b/week3/style.css
@@ -24,16 +24,53 @@ h1{
     width: 700px;
     float: left;
     line-height: 90px;
+    margin-left: 10px;
 }
 
 #header-img{
     float: left;
     border: 1px solid purple;
     justify-content: right;
+    margin-top: 10px;
 }
 
-ul{
-    list-style: none;
+nav{
+    text-align: center;
 }
+
+.nav-list {
+    list-style: none;
+    display: inline;
+}
+
+
+.btn:link{
+    width: 100px;
+    text-decoration: none;
+    height: 30px;
+    background-color: rgb(65, 5, 121);
+    color: white;
+    border: 2px solid rgb(63, 0, 82)
+}
+
+.btn:visited{
+    width: 100px;
+    text-decoration: none;
+    height: 30px;
+    background-color: rgb(65, 5, 121);
+    color: white;
+    border: 2px solid rgb(73, 2, 95)
+}
+
+.btn:hover{
+    width: 100px;
+    text-decoration: none;
+    height: 30px;
+    background-color: rgb(144, 94, 190);
+    color: white;
+    border: 2px solid rgb(73, 2, 95)
+}
+
+
 
 
